<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvNavDrawerHeaderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/my_account_label"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imgNavDrawerUserProfilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/tvNavDrawerHeaderTitle"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/ic_account_icon" />

    <TextView
        android:id="@+id/tvNavDrawerHeaderFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNavDrawerHeaderTitle"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/imgNavDrawerUserProfilePicture"
        android:layout_toRightOf="@+id/imgNavDrawerUserProfilePicture"
        android:text="@string/Full_name" />

    <TextView
        android:id="@+id/tvNavDrawerHeaderEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNavDrawerHeaderFullName"
        android:layout_toEndOf="@id/imgNavDrawerUserProfilePicture"
        android:layout_toRightOf="@id/imgNavDrawerUserProfilePicture"
        android:text="@string/email_address" />

    <ImageButton
        android:id="@+id/btnNavDrawerHeaderEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/edit_profile"
        android:src="@drawable/icon_feather_edit"
        android:tint="#8C8C8C"
        android:layout_alignParentEnd="true" />

</RelativeLayout>