<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ImageView
        android:id="@+id/ivActivityLeaveReviewFoodPlacePhoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/foodPlaceImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="61dp" />

    <TextView
        android:id="@+id/tvNameActivityLeaveReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/restaurant_name"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivActivityLeaveReviewFoodPlacePhoto" />

    <TextView
        android:id="@+id/tvActivityLeaveReviewCuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:hint="@string/restaurant_type"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvNameActivityLeaveReview"
        app:layout_constraintLeft_toRightOf="@id/tvNameActivityLeaveReview"
        app:layout_constraintTop_toTopOf="@+id/tvNameActivityLeaveReview" />

    <ImageView
        android:id="@+id/ivIconPhone"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="15dp"
        android:contentDescription="@string/phone_icon"
        android:src="@drawable/ic_phone_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameActivityLeaveReview" />

    <TextView
        android:id="@+id/tvPhoneNumberActivityLeaveReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/phone_number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivIconPhone"
        app:layout_constraintLeft_toRightOf="@id/ivIconPhone"
        app:layout_constraintTop_toTopOf="@+id/ivIconPhone" />

    <ImageView
        android:id="@+id/ivIconLocation"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="15dp"
        android:contentDescription="@string/Location_icon"
        android:src="@drawable/ic_location_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivIconPhone" />

    <TextView
        android:id="@+id/tvLocationActivityLeaveReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/phone_number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivIconLocation"
        app:layout_constraintLeft_toRightOf="@id/ivIconLocation"
        app:layout_constraintTop_toTopOf="@+id/ivIconLocation" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:isIndicator="true"
        android:numStars="5"
        android:theme="@style/ratingBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivIconLocation" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/Leave_a_review"
        app:layout_constraintBottom_toTopOf="@+id/btnActivityLeaveReview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        app:layout_constraintVertical_bias="0.505">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etActivityLeaveReviewMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnActivityLeaveReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_button"
        android:text="@string/add_comment"
        android:textColor="@color/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>