<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivActivityLeaveReview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="61dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvNameActivityLeaveReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/restaurant_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivActivityLeaveReview"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/textColorPrimary"/>

    <TextView
        android:id="@+id/tvTypeActivityLeaveReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginLeft="12dp"
        android:hint="@string/restaurant_type"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvNameActivityLeaveReview"
        app:layout_constraintLeft_toRightOf="@id/tvNameActivityLeaveReview"
        app:layout_constraintTop_toTopOf="@+id/tvNameActivityLeaveReview" />

    <ImageView
        android:id="@+id/ivIconPhone"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_phone_24"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameActivityLeaveReview"/>

    <TextView
        android:id="@+id/tvPhoneNumberActivityLeaveReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/phone_number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivIconPhone"
        app:layout_constraintLeft_toRightOf="@id/ivIconPhone"
        app:layout_constraintTop_toTopOf="@+id/ivIconPhone" />

    <ImageView
        android:id="@+id/ivIconLocation"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_location_24"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivIconPhone"/>

    <TextView
        android:id="@+id/tvLocationActivityLeaveReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/phone_number"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivIconLocation"
        app:layout_constraintLeft_toRightOf="@id/ivIconLocation"
        app:layout_constraintTop_toTopOf="@+id/ivIconLocation" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        app:layout_constraintTop_toBottomOf="@id/ivIconLocation"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="15dp"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:theme="@style/ratingBar"/>

    <EditText
        android:id="@+id/etActivityLeaveReviewLeaveReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Leave_a_review"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/btnActivityLeaveReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents.DayNight.Dialog"
        android:text="@string/add_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>