<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineSpotShadowColor="@color/colorPrimary"
    tools:targetApi="p">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivCardViewPhoto"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:contentDescription="@string/todo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCardViewRestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/restaurant_name"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/ivCardViewPhoto"
            app:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/ratingBarCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            app:layout_constraintTop_toBottomOf="@id/tvCardViewRestaurantName"
            app:layout_constraintLeft_toRightOf="@id/ivCardViewPhoto"
            android:layout_margin="15dp"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:theme="@style/ratingBar"/>

        <TextView
            android:id="@+id/tvCardViewReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/reviews"
            android:textColor="@color/textColorPrimary"
            android:layout_margin="15dp"
            app:layout_constraintLeft_toRightOf="@id/ratingBarCardView"
            app:layout_constraintTop_toTopOf="@id/ratingBarCardView"
            app:layout_constraintBottom_toBottomOf="@id/ratingBarCardView"/>

        <TextView
            android:id="@+id/tvCardViewCuisine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/restaurant_type"
            android:textColor="@color/textColorPrimary"
            android:layout_margin="15dp"
            app:layout_constraintLeft_toRightOf="@id/ivCardViewPhoto"
            app:layout_constraintTop_toBottomOf="@id/ratingBarCardView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>